# McHomeLab

./: .ansible-lint.yml  .gitignore  .yamllint  Makefile  README.md  ansible.cfg  pyproject.toml
ansible/: ansible.cfg  site.yml
ansible/filter_plugins/: registry_filters.py
ansible/group_vars/all/: best_task_file.yml  main.yml
ansible/inventory/: test-key  test-key.pub  test.yml
ansible/playbooks/dynamic_inventory/: vmware_vms.yml
ansible/roles/apt/defaults/: main.yml
ansible/roles/apt/handlers/: main.yml
ansible/roles/apt/tasks/: main.yml
ansible/roles/apt/vars/: main.yml
ansible/roles/ca-certificates/defaults/: main.yml
ansible/roles/ca-certificates/handlers/: main.yml
ansible/roles/ca-certificates/meta/: main.yml
ansible/roles/ca-certificates/tasks/: main.yml
ansible/roles/ca-certificates/tests/: test.yml
ansible/roles/ca-certificates/vars/: main.yml
ansible/roles/chrony/defaults/: main.yml
ansible/roles/chrony/handlers/: main.yml
ansible/roles/chrony/tasks/: main.yml
ansible/roles/chrony/vars/: main.yml
ansible/tasks/: best_task_file.yml
research/: RESEARCH_AIRVPN_MIGRATION.md  RESEARCH_ANSIBLE_MULTIPART.md  RESEARCH_ARR_QUALITY_AND_SEEDERS.md  RESEARCH_FLARESOLVERR.md  RESEARCH_HP_PRINTER_CERT_API.md  RESEARCH_IDRAC8_CERT_API.md  RESEARCH_IDRAC8_CERT_AUTOMATION.md  RESEARCH_IDRAC8_CERT_FINDINGS.md  RESEARCH_SONARR_HARDLINK_IMPORT.md  RESEARCH_STEP_CA_CERT_AUTOMATION.md  RESEARCH_STEP_CA_CERT_FINDINGS.md  RESEARCH_SYNOLOGY_CERT_API.md  RESEARCH_VM_SYSLOG_FORWARDING.md  traefik-investigation.md
scripts/: McHomeLab
(+93 files in other folders)
