[project]
name = "mchomelab"
version = "0.1.0"
description = ""
authors = [
    {name = "Michael"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ansible (>=12.0.0,<13.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
