[project]
name = "mchomelab"
version = "0.1.0"
description = ""
authors = [
    {name = "Michael"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ansible (>=12.0.0,<13.0.0)",
    "ansible-core (>=2.19.2,<3.0.0)",
    "pyvmomi (>=8.0.3.0.1)",
    "vmware-vcenter (>=9.0.0.0,<10.0.0.0)",
    "vmware-vapi-common-client (>=2.61.2,<3.0.0)",
    "aiohttp (>=3.12.15,<4.0.0)",
    "pyopenssl (>=24.2.1)",
    "ansible-lint (>=25.9.0,<26.0.0)",
    "jmespath (>=1.0.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
